fix: fix gaps

--- a/src/components/Main/styles.module.css
+++ b/src/components/Main/styles.module.css
@@ -2,8 +2,8 @@
   grid-area: main;
   display: flex;
   margin: 0 auto;
-  margin-top: 2rem;
+  margin-top: 1rem;
   flex-direction: column;
   align-items: center;
-  gap: 5rem;
+  gap: 3rem;
 }
